deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: decidim-app-production
  namespace: decidim
spec:
  selector:
    app: decidim-app-production
  ports:
  - name: default
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: ClientIP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: decidim-app-staging
  namespace: decidim
spec:
  selector:
    app: decidim-app-staging
  ports:
  - name: default
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: ClientIP
  type: ClusterIP
