deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: decidim-app
  namespace: decidim
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: kimu-search-basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - kimu-search'
spec:
  tls:
  - hosts:
    - www.zukunftsprozess.de
    - zukunftsprozess.de
    secretName: decidim-app-tls
  rules:
  - host: www.zukunftsprozess.de
    http:
      paths:
      - backend:
          service:
            name: decidim-app-production
            port:
              number: 80
        pathType: ImplementationSpecific
