deploy/ingress_redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: decidim-app-redirect
  namespace: decidim
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/permanent-redirect: "https://www.zukunftsprozess.de"
spec:
  tls:
  - hosts:
    - zukunfts-prozess.de
    - www.zukunfts-prozess.de
    secretName: decidim-app-2-tls
  rules:
  - host: www.zukunfts-prozess.de
    http:
      paths:
      - backend:
          service:
            name: decidim-app-production
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: zukunfts-prozess.de
    http:
      paths:
      - backend:
          service:
            name: decidim-app-production
            port:
              number: 80
        pathType: ImplementationSpecific
