deploy/ingress_staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: decidim-app
  namespace: decidim
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: kimu-search-basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - kimu-search'
spec:
  tls:
  - hosts:
    - decidim-staging.systeme-e.de
    secretName: decidim-staging-app-tls
  rules:
  - host: decidim-staging.systeme-e.de
    http:
      paths:
      - backend:
          serviceName: decidim-app-staging
          servicePort: 80
